修复输出错误信息